--- a/semana16/semana16-projeto/package.json
+++ b/semana16/semana16-projeto/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/knex": "^0.16.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.6",
